Title screen no longer presents scrollbars, and has a "press any key" so music plays

--- a/darkunknown.css
+++ b/darkunknown.css
@@ -18,7 +18,7 @@
 
 @keyframes widentitle {
 	from {width:2px; }
-	to { width:800px}
+	to { width:776px}
 }
 
 .widenanimate {
